--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -1,20 +1,29 @@
 @media screen and (max-width: 480px) {
     .parent {
+        width: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
+        
         justify-content: center;
         align-items: center;
     }
 }
+
+
+
+
+
+
 @media screen and (min-width: 480px) {
     .parent {
+        width: 100%;
         display: flex;
         justify-content: space-between;
     }
 }
 @media screen and (min-width: 480px) {
     .body {
-        width: 84%;
+        width: 80%;
         height: 100vh !important;
         position: sticky;
         right: 0;
@@ -22,7 +31,7 @@
 }
 @media screen and (min-width: 480px) {
     .sidebar {
-        width: 15%;
+        width: 20%;
         height: 100%;
         border-right: 1px solid black;
         position: fixed;
@@ -30,4 +39,14 @@
         left: 0;
     }
 }
-/* style={{ width: "15%", borderRight: "1px solid black", height: "100vh", position: "fixed", top: 0 }} */
+
+
+@media screen and (max-width: 480px) {
+    .sidebar {
+        width: 100%;
+      display: flex;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+}
