--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -3,17 +3,10 @@
         width: 100%;
         display: flex;
         flex-direction: column-reverse;
-        
         justify-content: center;
         align-items: center;
     }
 }
-
-
-
-
-
-
 @media screen and (min-width: 480px) {
     .parent {
         width: 100%;
@@ -39,14 +32,14 @@
         left: 0;
     }
 }
-
-
 @media screen and (max-width: 480px) {
     .sidebar {
         width: 100%;
-      display: flex;
-      position: absolute;
-      bottom: 0;
-      left: 0;
+        display: flex;
+        position: absolute;
+        padding-right: 1.5rem !important;
+
+        bottom: 0;
+        left: 0;
     }
 }
